--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "nim: debug current file",
-            "preLaunchTask": "nim: build current file (for debugging)",
-            "program": "${workspaceFolder}/bin/${fileBasenameNoExtension}",
+            "name": "nim: debug main",
+            "program": "${workspaceFolder}/bin/ChipNim8",
+            "preLaunchTask": "nim: build (for debugging)",
             "args": [],
             "cwd": "${workspaceFolder}",
+            "breakpointMode": "file"
         }
     ]
 }
